# wat-frontend

./: .gitignore  ChangeLog.md  Check.hs  Keywords.hs  LICENSE  Lexer.hs  Main.hs  Parser.hs  dotest  readme.md  wat-frontend.cabal
src/: Check.hs  Keywords.hs  Lexer.hs  Main.hs  Parser.hs
tests/: uHexNum  uHexNum_
tests/components/: badFuncBlockNoEnd.wat  export.wat  funcBlock.wat  funcBlockFailLabelMismatch.wat  funcIfs.wat  funcInstruction.wat  funcInstructions.wat  funcLocals.wat  funcLoops.wat  funcs.wat  globals.wat  import.wat  imports.wat  moduleId.wat  start.wat  typeAndFunc.wat
tests/limits/: i32failHigh.wat  i32failHighSigned.wat  i32failLow.wat  i32max.wat  i32maxSigned.wat  i32min.wat  i32wordRepresentations.wat  i64failHigh.wat  i64failHighSigned.wat  i64failLow.wat  i64max.wat  i64maxSigned.wat  i64min.wat  i64wordRepresentations.wat  indexFailHigh.wat  indexFailLow.wat  indexMax.wat  indexMin.wat
tests/programs/: add.wat  and.wat  assign.wat  eq.wat  for.wat  func.wat  if.wat  ifors.wat  letInt.wat  letfunc.wat  letnested.wat  letshadowvar.wat  letvar.wat  ne.wat  recursiveCount.wat  recursiveSum.wat  subtract.wat  vardec.wat
tests/semantic-analysis/: exports.wat  exportsFail.wat  funcLeftoverOpdFail.wat  funcs.wat  funcsFail.wat  globals.wat  globalsFail.wat  importOrderFail.wat  importOutOfOrder.wat  imports.wat  importsFail.wat  prepass.wat  prepassFail.wat  start.wat  startFail.wat
tests/tokens/: blockComment  blockComments  blockCommentsWithTokens  intAndString.tok  keywords  lineComment.tok  lineComments.tok  (+12 more)
validation/: LexSpec.hs
(+467 files in other folders)
