name:                wat-frontend
version:             0.1.0.0
synopsis:            Compiler frontend for WebAssembly text
license:             BSD3
license-file:        LICENSE
author:              Brian Ginsburg
maintainer:          gins@brianginsburg.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, readme.md
cabal-version:       >=1.10


executable wat-frontend
  main-is:             Main.hs
  other-extensions:    FlexibleInstances
  build-depends:       base >=4.9 && <4.10, directory >=1.3 && <1.4, filepath >=1.4.1.1 && <1.5, mtl >=2.2.1 && <2.3, optparse-applicative >=0.14.3.0 && <0.15, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns

library
  exposed-modules:    Check Keywords Lexer Parser
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:       base >=4.9 && <4.10, directory >=1.3 && <1.4, filepath >=1.4.1.1, mtl >=2.2.1, optparse-applicative >=0.14.3.0, parsec >=3.1 && <3.2

test-suite validation
  main-is:            Spec.hs
  hs-source-dirs:     validation
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  build-depends:      base >=4.7 && <5, hspec >=2.7.0, hspec-discover >=2.7.0 , mtl >=2.2.1, optparse-applicative >=0.14.3.0, parsec >=3.1 && <3.2, QuickCheck >=2.12.6.1, wat-frontend >=0.1.0.0